<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewSheetActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/NewSheetTitle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Titre"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/listDivider" />

                <EditText
                    android:id="@+id/NewSheetTitleEntry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/NewSheetAuthor"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Auteur"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="?android:attr/listDivider" />

                <EditText
                    android:id="@+id/NewSheetAuthorEntry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/NewSheetDesc"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Description"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/divider5"
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="?android:attr/listDivider" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textMultiLine" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/NewSheetDateJour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Jour"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/NewSheetDateJourSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout_width="wrap_content" />

                <TextView
                    android:id="@+id/NewSheetDateMois"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mois"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/NewSheetDateMoisSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/newSheetDateAnnee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Année"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/NewSheetDateAnneeSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <ImageView
                android:id="@+id/NewSheetImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ImageSheet"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/NewSheetButtonChooseImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ImageButton" />

            <View
                android:id="@+id/divider6"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/NewSheetButtonAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/Ajouter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>